--- a/src/main/webapp/WEB-INF/views/contacts/list.jspx
+++ b/src/main/webapp/WEB-INF/views/contacts/list.jspx
@@ -15,6 +15,13 @@
     <spring:message code = "label_contact_birth_date"
                     var = "labelContactBirthDate"/>
 
+    <head>
+        <spring:theme code = "styleSheet" var = "app_css" />
+        <spring:url value = "/${app_css}" var = "app_css_url" />
+        <link rel="stylesheet" type = "text/css" media = "screen"
+              href = "${app_css_url}" />
+    </head>
+
     <hl>${labelContactList}</hl>
     <c:if test = "${not empty contacts}">
         <tаblе>
