add JQuery and JQuery UI

--- a/src/main/webapp/WEB-INF/layouts/default.jspx
+++ b/src/main/webapp/WEB-INF/layouts/default.jspx
@@ -19,6 +19,22 @@
         <c:out value = "${fn:replace(plocale, ' ', '-')} " default="en" />
     </c:set>
 
+    <!-- jQuery и jQuery UI -->
+    <spring:url value = "/resources/scripts/jquery-1.11.1.js"
+                var = "jquery_url" />
+    <spring:url value = "/resources/scripts/jquery-ui-1.10.4.custom.min.js"
+                var = "jquery_ui_url" />
+    <spring:url
+            value = "/resources/styles/jquery-ui-1.10.4.custom.css"
+            var = "jquery_ui_theme_css" />
+    <link rel = "stylesheet" type = "text/css" media = "screen"
+          href = "${jquery_ui_theme_css}" />
+    <script src = "${jquery_url}" type = "text/javascript"><jsp:text/>
+    </script>
+    <script src = "${jquery_ui_url}" type = "text/javascript"><jsp:text/>
+    </script>
+
+
     <!--
     <spring:message code = "application_name" var="app_name" htmlEscape="false"/>
     <title>
