--- a/src/main/webapp/WEB-INF/views/contacts/edit.jspx
+++ b/src/main/webapp/WEB-INF/views/contacts/edit.jspx
@@ -4,6 +4,15 @@
      xmlns:spring="http://www.springframework.org/tags"
      xmlns:form="http://www.springframework.org/tags/form"
      version="2.0">
+    <script type = "text/javascript">
+        $(function() {
+            $ ( '#birthDate') . datepicker ( {
+                dateFormat: 'yy-mm-dd',
+                changeYear: true
+            } ) ;
+        } ) ;
+    </script>
+
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <spring:message code = "label_contact_new" var = "labelContactNew"/>
@@ -18,7 +27,7 @@
                     var = "labelContactDescription"/>
     <spring:message code="label_contact_photo" var = "labelContactPhoto"/>
     <spring:eval expression="contact.id == null ?
-labelContactNew:labelContactUpdate"
+                labelContactNew:labelContactUpdate"
              var="formTitle"/>
     <H1>${formTitle}</H1>
     <div id = "contactUpdate">
@@ -60,8 +69,14 @@ labelContactNew:labelContactUpdate"
             </div>
             <р/>
             <form:hidden path = "version" />
-            <button type = "submit">Save</button>
-            <button type="reset">Reset</button>
+            <button type="submit"
+                    class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">
+                <span class = "ui-button-text">Save</span>
+            </button>
+            <button type = "reset"
+                    class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">
+                <span class = "ui-button-text">Reset</span>
+            </button>
         </form:form>
     </div>
 </div>
