--- a/src/main/webapp/WEB-INF/views/contacts/edit.jspx
+++ b/src/main/webapp/WEB-INF/views/contacts/edit.jspx
@@ -46,7 +46,8 @@
              var="formTitle"/>
     <H1>${formTitle}</H1>
     <div id = "contactUpdate">
-        <form:form modelAttribute = "contact" id = "contactUpdateForm" method="post">
+        <form:form modelAttribute = "contact" id = "contactUpdateForm" method="post"
+        enctype="multipart/form-data">
             <c:if test="${not empty message}">
                 <div id = "message" class = "${message.type}">${message.message}</div>
             </c:if>
@@ -82,8 +83,17 @@
             <div>
                 <form:errors path = "description" cssClass = "error" />
             </div>
+
+            <р/>
+            <label for = "file">
+                ${labelContactPhoto}
+            </label>
+            <input name = "file" type="file"/>
+            <р/>
+
             <р/>
             <form:hidden path = "version" />
+
             <button type="submit"
                     class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">
                 <span class = "ui-button-text">Save</span>
